fixed scrollbar bug

--- a/app/css/interface.css
+++ b/app/css/interface.css
@@ -1,3 +1,17 @@
+::-webkit-scrollbar {
+    width: 10px;
+	height: 0;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 0;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 6px;
+    background-color: #ccc;
+}
+
 html { -webkit-font-smoothing: antialiased; text-shadow: none; text-rendering: optimizeLegibility }
 body { background-color: #CFDAE6 }
 a { color: inherit; text-decoration: inherit !important }
